--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Researcher
-url: "https://ankitsultana.com"
+url: "https://ake020675.com"
 baseurl: "/researcher"
 
 markdown: kramdown
@@ -8,7 +8,7 @@ markdown: kramdown
 tracking_id: #
 
 footer: yes
-footer_url: "https://github.com/ankitsultana"
+footer_url: "https://github.com/ake020675"
 footer_text: "Page design by Ankit Sultana"
 
 sass:
